k8s/drone.yaml
---
# Source: drone/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone

---
# Source: drone/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      app.kubernetes.io/instance: drone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        app.kubernetes.io/instance: drone
    spec:
      containers:
        - name: drone
          image: 'iteam1337/brevduvor-drone:latest'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          resources: {}

---
# Source: drone/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - 'drone.brevduvor.iteamdev.se'
      secretName: drone-letsencrypt-prod
  rules:
    - host: 'drone.brevduvor.iteamdev.se'
      http:
        paths:
          - path: /
            backend:
              serviceName: drone
              servicePort: http
